@@ -3,6 +3,9 @@
  * Add ``walk_untracked`` argument to ``porcelain.status``.
    (Daniele Trifirò)
 
+ * Add tests for paramiko SSH Vendor.
+   (Filipp Frizzy)
+
 0.20.35	2022-03-20
 
  * Document the ``path`` attribute for ``Repo``.
